GNOME Font Viewer - 46.0
-------------------------------------------------------------------------------
Fonts 46.0 comes with the following improvements:
* Fix incorrect/missing URLs (Vaishnavi Nawghare)
* Improve app metainfo (Sabri Ünal)

This version brings translation updates for the following locales:
 * Esperanto (Kristjan SCHMIDT)
 * Georgian (Ekaterine Papava)
 * Greek, Modern (1453-) (Efstathios Iosifidis)
 * Hebrew (Yaron Shahrabani)
 * Latvian (Rūdolfs Mazurs)
 * Panjabi (A S Alam)
 * Romanian (Florentina Mușat)


GNOME Font Viewer - 45.0
-------------------------------------------------------------------------------
Fonts 45.0 comes with a new look courtesy of the new libadwaita 1.4 widgets.

This version brings translation updates for the following locales:
 * Belarusian (Vasil Pupkin)
 * Chinese (China) (Boyuan Yang)
 * Dutch (Nathan Follens)
 * English (United Kingdom) (Bruce Cowan)
 * Greek, Modern (1453*) (Efstathios Iosifidis)
 * Icelandic (Sveinn í Felli)
 * Italian (Gianvito Cavasoli)
 * Kazakh (Baurzhan Muftakhidinov)
 * Portuguese (Brazil) (Leônidas Araújo)
 * Turkish (Sabri Ünal)

GNOME Font Viewer - 45.alpha
-------------------------------------------------------------------------------
Fonts 45.alpha comes with a new look courtesy of the new libadwaita 1.4 widgets.

This version brings translation updates for the following locales:
 * Chinese (China) (Boyuan Yang)
 * Dutch (Nathan Follens)
 * English (United Kingdom) (Bruce Cowan)
 * Icelandic (Sveinn í Felli)
 * Italian (Gianvito Cavasoli)
 * Turkish (Sabri Ünal)

GNOME Font Viewer - 44.0
-------------------------------------------------------------------------------
Fonts 44.0 comes with general consistency improvements to the application:

* The app now provides standard shortcuts like Ctrl+Q and Ctrl+F
* New widgetry allows for navigation via the back mouse button, alt+arrows, and touchscreen swipes
* Various buttons can now be used with mnemonics
